# galay-etcd

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md
benchmark/: AsyncBenchmarkSupport.cc  B1-EtcdKvBenchmark.cc  B1-etcd_kv_benchmark.cc  CMakeLists.txt  b1_kv.cc  b2_kv.cc  bench_support.cc
build-docverify/: CMakeCache.txt  Makefile  cmake_install.cmake
build-docverify/benchmark/: B1-EtcdKvBenchmark  Makefile  cmake_install.cmake
build-docverify/examples/: E1-SyncBasic  E2-AsyncBasic  Makefile  cmake_install.cmake
build-docverify/galay-etcd/: Makefile  cmake_install.cmake
build-docverify/test/: Makefile  T1-EtcdSmoke  T2-EtcdPrefixOps  T3-EtcdPipeline  T4-AsyncEtcdSmoke  T5-AsyncEtcdPipeline  cmake_install.cmake
cmake/: GalayEtcdConfig.cmake.in  galay-etcd-config.cmake.in  option.cmake
docs/: 00-快速开始.md  01-快速开始.md  01-架构设计.md  02-API参考.md  03-使用指南.md  03-测试与压测.md  04-架构设计.md  04-示例代码.md  05-性能测试.md  05-示例代码.md  06-高级主题.md  07-常见问题.md  release_note.md
docs/plans/: 2026-03-23-async-etcd-benchmark-design.md  2026-03-23-async-etcd-benchmark.md  2026-04-29-etcd-client-direct-results-design.md  2026-04-29-etcd-client-direct-results.md
example/: CMakeLists.txt  E1-SyncBasic.cc  E2-AsyncBasic.cc
examples/: CMakeLists.txt  E1-SyncBasic.cc  E2-AsyncBasic.cc  E2-async_basic.cc
examples/import/: e1_basic.cc  e2_basic.cc
examples/include/: e1_basic.cc  e2_basic.cc
galay-etcd/: CMakeLists.txt
galay-etcd/async/: AsyncEtcdClient.cc  AsyncEtcdClient.h  AsyncEtcdConfig.h  client_cfg.h  etcd_client.cc  etcd_client.h
galay-etcd/base/: EtcdConfig.h  EtcdError.cc  EtcdError.h  EtcdInternal.h  etcd_config.h  etcd_error.cc  etcd_internal.h  etcd_types.h
galay-etcd/module/: ModulePrelude.hpp  galay.etcd.cppm  galay_etcd.cppm  module_prelude.hpp
galay-etcd/sync/: EtcdClient.cc  EtcdClient.h  etcd_client.cc  etcd_client.h
test/: CMakeLists.txt  T1-EtcdSmoke.cc  T2-EtcdPrefixOps.cc  T3-EtcdPipeline.cc  T4-AsyncEtcdSmoke.cc  T5-AsyncEtcdPipeline.cc  T5-async_etcd_pipeline.cc  T8-async_benchmark_smoke.cc  t1_smoke.cc  t2_prefix.cc  t3_pipe.cc  t4_smoke.cc  t5_pipe.cc  t6_helpers.cc  t7_await.cc  t8_bench.cc  t9_task_watch.cc
