cmake_minimum_required(VERSION 3.20)
project(galay-etcd LANGUAGES CXX)

include(cmake/option.cmake)

message(STATUS "GALAY_ETCD_CXX_STANDARD: ${GALAY_ETCD_CXX_STANDARD}")
message(STATUS "GALAY_ETCD_BUILD_SHARED_LIBS: ${GALAY_ETCD_BUILD_SHARED_LIBS}")
message(STATUS "GALAY_ETCD_INSTALL_MODULE_INTERFACE: ${GALAY_ETCD_INSTALL_MODULE_INTERFACE}")
message(STATUS "GALAY_ETCD_IMPORT_COMPILATION_ENABLED: ${GALAY_ETCD_IMPORT_COMPILATION_ENABLED}")
message(STATUS "GALAY_ETCD_BUILD_TESTS: ${GALAY_ETCD_BUILD_TESTS}")
message(STATUS "GALAY_ETCD_BUILD_BENCHMARKS: ${GALAY_ETCD_BUILD_BENCHMARKS}")
message(STATUS "GALAY_ETCD_BUILD_EXAMPLES: ${GALAY_ETCD_BUILD_EXAMPLES}")

add_subdirectory(galay-etcd)

if(GALAY_ETCD_BUILD_TESTS)
    add_subdirectory(test)
endif()

if(GALAY_ETCD_BUILD_BENCHMARKS)
    add_subdirectory(benchmark)
endif()

if(GALAY_ETCD_BUILD_EXAMPLES)
    add_subdirectory(example)
endif()
