function(galay_etcd_apply_local_dep_includes target_name)
    if(GALAY_ETCD_LOCAL_DEP_INCLUDE_DIRS)
        target_include_directories(${target_name} BEFORE PRIVATE ${GALAY_ETCD_LOCAL_DEP_INCLUDE_DIRS})
        foreach(_galay_etcd_local_dep_include IN LISTS GALAY_ETCD_LOCAL_DEP_INCLUDE_DIRS)
            target_compile_options(${target_name} BEFORE PRIVATE "-I${_galay_etcd_local_dep_include}")
        endforeach()
    endif()
endfunction()

add_executable(E1-SyncBasic E1-sync_basic.cc)
target_link_libraries(E1-SyncBasic PRIVATE galay-etcd)
set_property(TARGET E1-SyncBasic PROPERTY NO_SYSTEM_FROM_IMPORTED ON)
galay_etcd_apply_local_dep_includes(E1-SyncBasic)
galay_etcd_apply_cxx(E1-SyncBasic)

add_executable(E2-AsyncBasic E2-async_basic.cc)
target_link_libraries(E2-AsyncBasic PRIVATE galay-etcd)
set_property(TARGET E2-AsyncBasic PROPERTY NO_SYSTEM_FROM_IMPORTED ON)
galay_etcd_apply_local_dep_includes(E2-AsyncBasic)
galay_etcd_apply_cxx(E2-AsyncBasic)
